Allow to manually report an issue
Signed-off-by: guillaume-haerinck <guillaume.haerinck@outlook.com>

--- a/Code/Tools/CrashHandler/Tools/UI/submit_report.ui
+++ b/Code/Tools/CrashHandler/Tools/UI/submit_report.ui
@@ -96,7 +96,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>An Open 3D Engine Editor crash debugging file has been created at:</string>
+    <string>Information about the crash has been created at:</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
@@ -134,13 +134,13 @@
     </rect>
    </property>
    <property name="text">
-    <string>If you are willing to submit this file to Amazon it will help us improve the Open 3D Engine experience.  We will treat this report as confidential.</string>
+    <string>If you are willing to submit this file it will help us to fix this issue.</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="question_label">
    <property name="geometry">
     <rect>
      <x>6</x>
